--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "caver-js": "^1.8.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -20,7 +21,6 @@
     "mongoose": "^6.2.1",
     "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-local": "^1.0.0"
+    "passport": "^0.5.2"
   }
 }
