--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "body-parser": "^1.19.1",
     "caver-js": "^1.8.0",
     "connect-mongo": "^4.6.0",
@@ -18,6 +19,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "form-data": "^4.0.0",
     "mongoose": "^6.2.1",
     "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^2.0.15",
