--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "form-data": "^4.0.0",
     "mongoose": "^6.2.1",
     "mongoose-auto-increment": "^5.0.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2"
   }
