--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,12 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "form-data": "^4.0.0",
+    "fs": "0.0.1-security",
     "mongoose": "^6.2.1",
     "mongoose-auto-increment": "^5.0.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "path": "^0.12.7"
   }
 }
