--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "zip-a-folder": "^1.1.3"
   }
 }
